// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomBarChart component Rendering with different color arrays renders with colors.length < 3 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts10-clip"
      >
        <rect
          height="330"
          width="480"
          x="90"
          y="20"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-reference-line"
    >
      <line
        class="recharts-reference-line-line"
        fill="none"
        fill-opacity="1"
        stroke="#000"
        stroke-width="1"
        x1="90"
        x2="570"
        y="0"
        y1="350"
        y2="350"
      />
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="30"
        orientation="bottom"
        stroke="#666"
        width="480"
        x="90"
        x1="90"
        x2="570"
        y="350"
        y1="350"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="90"
            x2="90"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(90,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              A
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="330"
            x2="330"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(330,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              B
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="570"
            x2="570"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(570,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              C
            </text>
          </g>
        </g>
      </g>
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="330"
        orientation="left"
        stroke="#666"
        width="60"
        x="30"
        x1="90"
        x2="90"
        y="20"
        y1="20"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="350"
            y2="350"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="350"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="267.5"
            y2="267.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="267.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              8
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="185"
            y2="185"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="185"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              16
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="102.5"
            y2="102.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="102.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              24
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="20"
            y2="20"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="20"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              32
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      class="recharts-cartesian-grid"
    >
      <g
        class="recharts-cartesian-grid-horizontal"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="350"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="267.5"
          y2="267.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="185"
          y2="185"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="102.5"
          y2="102.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="20"
          y2="20"
        />
      </g>
      <g
        class="recharts-cartesian-grid-vertical"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="90"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="330"
          x2="330"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="570"
          x2="570"
          y="20"
          y1="20"
          y2="350"
        />
      </g>
    </g>
    <g
      class="recharts-layer recharts-bar"
    >
      <g
        class="recharts-layer recharts-bar-rectangles"
      >
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="A"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 310,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="B"
          width="40"
          x="310"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 550,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="C"
          width="40"
          x="550"
          y="20"
        />
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`CustomBarChart component Rendering with different color arrays renders with colors.length >= 3 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts13-clip"
      >
        <rect
          height="330"
          width="480"
          x="90"
          y="20"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-reference-line"
    >
      <line
        class="recharts-reference-line-line"
        fill="none"
        fill-opacity="1"
        stroke="#000"
        stroke-width="1"
        x1="90"
        x2="570"
        y="0"
        y1="350"
        y2="350"
      />
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="30"
        orientation="bottom"
        stroke="#666"
        width="480"
        x="90"
        x1="90"
        x2="570"
        y="350"
        y1="350"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="90"
            x2="90"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(90,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              A
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="330"
            x2="330"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(330,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              B
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="570"
            x2="570"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(570,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              C
            </text>
          </g>
        </g>
      </g>
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="330"
        orientation="left"
        stroke="#666"
        width="60"
        x="30"
        x1="90"
        x2="90"
        y="20"
        y1="20"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="350"
            y2="350"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="350"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="267.5"
            y2="267.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="267.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              8
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="185"
            y2="185"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="185"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              16
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="102.5"
            y2="102.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="102.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              24
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="20"
            y2="20"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="20"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              32
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      class="recharts-cartesian-grid"
    >
      <g
        class="recharts-cartesian-grid-horizontal"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="350"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="267.5"
          y2="267.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="185"
          y2="185"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="102.5"
          y2="102.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="20"
          y2="20"
        />
      </g>
      <g
        class="recharts-cartesian-grid-vertical"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="90"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="330"
          x2="330"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="570"
          x2="570"
          y="20"
          y1="20"
          y2="350"
        />
      </g>
    </g>
    <g
      class="recharts-layer recharts-bar"
    >
      <g
        class="recharts-layer recharts-bar-rectangles"
      >
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="A"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 310,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="B"
          width="40"
          x="310"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 550,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="C"
          width="40"
          x="550"
          y="20"
        />
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`CustomBarChart component Rendering with different widths renders CustomBarChart component with narrow tick width 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 100px; height: 400px;"
>
  <svg
    class="recharts-surface"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 100 400"
    width="100"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts7-clip"
      >
        <rect
          height="330"
          width="0"
          x="90"
          y="20"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-reference-line"
    >
      <line
        class="recharts-reference-line-line"
        fill="none"
        fill-opacity="1"
        stroke="#000"
        stroke-width="1"
        x1="90"
        x2="90"
        y="0"
        y1="350"
        y2="350"
      />
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="330"
        orientation="left"
        stroke="#666"
        width="60"
        x="30"
        x1="90"
        x2="90"
        y="20"
        y1="20"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="350"
            y2="350"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="350"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="267.5"
            y2="267.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="267.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              8
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="185"
            y2="185"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="185"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              16
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="102.5"
            y2="102.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="102.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              24
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="20"
            y2="20"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="20"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              32
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      class="recharts-layer recharts-bar"
    >
      <g
        class="recharts-layer recharts-bar-rectangles"
      >
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="A"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="B"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="C"
          width="40"
          x="70"
          y="20"
        />
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`CustomBarChart component Rendering with different widths renders with default width 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 600px; height: 400px;"
>
  <svg
    class="recharts-surface"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 600 400"
    width="600"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts1-clip"
      >
        <rect
          height="330"
          width="480"
          x="90"
          y="20"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-reference-line"
    >
      <line
        class="recharts-reference-line-line"
        fill="none"
        fill-opacity="1"
        stroke="#000"
        stroke-width="1"
        x1="90"
        x2="570"
        y="0"
        y1="350"
        y2="350"
      />
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="30"
        orientation="bottom"
        stroke="#666"
        width="480"
        x="90"
        x1="90"
        x2="570"
        y="350"
        y1="350"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="90"
            x2="90"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(90,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              A
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="330"
            x2="330"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(330,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              B
            </text>
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="30"
            orientation="bottom"
            stroke="#666"
            width="480"
            x="90"
            x1="570"
            x2="570"
            y="350"
            y1="356"
            y2="350"
          />
          <g
            transform="translate(570,358)"
          >
            <text
              dy="10"
              fill="#666"
              text-anchor="end"
              x="15"
              y="0"
            >
              C
            </text>
          </g>
        </g>
      </g>
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="330"
        orientation="left"
        stroke="#666"
        width="60"
        x="30"
        x1="90"
        x2="90"
        y="20"
        y1="20"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="350"
            y2="350"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="350"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="267.5"
            y2="267.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="267.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              8
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="185"
            y2="185"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="185"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              16
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="102.5"
            y2="102.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="102.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              24
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="20"
            y2="20"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="20"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              32
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      class="recharts-cartesian-grid"
    >
      <g
        class="recharts-cartesian-grid-horizontal"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="350"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="267.5"
          y2="267.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="185"
          y2="185"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="102.5"
          y2="102.5"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="570"
          y="20"
          y1="20"
          y2="20"
        />
      </g>
      <g
        class="recharts-cartesian-grid-vertical"
      >
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="90"
          x2="90"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="330"
          x2="330"
          y="20"
          y1="20"
          y2="350"
        />
        <line
          fill="none"
          height="330"
          stroke="#ccc"
          stroke-dasharray="3 3"
          width="480"
          x="90"
          x1="570"
          x2="570"
          y="20"
          y1="20"
          y2="350"
        />
      </g>
    </g>
    <g
      class="recharts-layer recharts-bar"
    >
      <g
        class="recharts-layer recharts-bar-rectangles"
      >
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="A"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 310,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="B"
          width="40"
          x="310"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 550,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="C"
          width="40"
          x="550"
          y="20"
        />
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`CustomBarChart component Rendering with different widths renders with narrow width 1`] = `
<div
  class="recharts-wrapper"
  role="region"
  style="position: relative; cursor: default; width: 100px; height: 400px;"
>
  <svg
    class="recharts-surface"
    height="400"
    style="width: 100%; height: 100%;"
    viewBox="0 0 100 400"
    width="100"
  >
    <title />
    <desc />
    <defs>
      <clippath
        id="recharts4-clip"
      >
        <rect
          height="330"
          width="0"
          x="90"
          y="20"
        />
      </clippath>
    </defs>
    <g
      class="recharts-layer recharts-reference-line"
    >
      <line
        class="recharts-reference-line-line"
        fill="none"
        fill-opacity="1"
        stroke="#000"
        stroke-width="1"
        x1="90"
        x2="90"
        y="0"
        y1="350"
        y2="350"
      />
    </g>
    <g
      class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        class="recharts-cartesian-axis-line"
        fill="none"
        height="330"
        orientation="left"
        stroke="#666"
        width="60"
        x="30"
        x1="90"
        x2="90"
        y="20"
        y1="20"
        y2="350"
      />
      <g
        class="recharts-cartesian-axis-ticks"
      >
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="350"
            y2="350"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="350"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="267.5"
            y2="267.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="267.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              8
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="185"
            y2="185"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="185"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              16
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="102.5"
            y2="102.5"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="102.5"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              24
            </tspan>
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            class="recharts-cartesian-axis-tick-line"
            fill="none"
            height="330"
            orientation="left"
            stroke="#666"
            width="60"
            x="30"
            x1="84"
            x2="90"
            y="20"
            y1="20"
            y2="20"
          />
          <text
            class="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height="330"
            orientation="left"
            stroke="none"
            text-anchor="end"
            width="60"
            x="82"
            y="20"
          >
            <tspan
              dy="0.355em"
              x="82"
            >
              32
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      class="recharts-layer recharts-bar"
    >
      <g
        class="recharts-layer recharts-bar-rectangles"
      >
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="A"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="B"
          width="40"
          x="70"
          y="20"
        />
        <path
          class="recharts-rectangle recharts-bar-background-rectangle"
          d="M 70,20 h 40 v 330 h -40 Z"
          fill="#eee"
          height="330"
          name="C"
          width="40"
          x="70"
          y="20"
        />
        <g
          class="recharts-layer"
        >
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
          <g
            class="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
